fix: page selector out of bounds #81

--- a/src/app/modules/marketplace/components/assets-list/assets-list.component.scss
+++ b/src/app/modules/marketplace/components/assets-list/assets-list.component.scss
@@ -2,8 +2,6 @@
   justify-content: space-between;
 }
 
-
-
 .viewer {
   width: 100%;
 }
@@ -24,6 +22,22 @@
   background: inherit;
   font-family: inherit;
   font-size: inherit;
+}
+
+.main-content-wrapper {
+  width: 100%;
+  overflow: hidden;
+}
+
+.paginator-container {
+  width: 100%;
+  margin-top: 20px;
+  padding: 0 15px;
+  box-sizing: border-box;
+  max-width: 100%;
+  overflow-x: auto;
+  font-family: 'Jura', sans-serif;
+  font-size: 16px;
 }
 
 .search-row {
@@ -48,29 +62,34 @@
 }
 
 .slider:before {
-   background-color: transparent; 
-
+  background-color: transparent;
 }
 
-.active{
-  background: #0047BB;
+.active {
+  background: #0047bb;
   border-radius: 50%;
   height: 30px;
   width: 30px;
   justify-content: center;
-  display: flex
-;
-  
+  display: flex;
   align-items: center;
 }
 
 ::ng-deep {
   .mat-mdc-select-value-text {
-    color: #ffffffb2; /* Add your styles here */
+    color: #ffffffb2;
+    font-family: 'Jura', sans-serif;
+    font-size: 16px;
   }
   .mat-mdc-paginator-icon {
     color: #ffed00;
   }
+
+  .mat-mdc-paginator-range-label,
+  .mat-mdc-paginator-page-size-label {
+    color: #ffffff;
+  }
+
   .mdc-checkbox__background {
     border-color: #ffed00 !important;
   }
@@ -88,12 +107,26 @@
   }
 
   [data-theme="light"] {
-      .mat-mdc-checkbox-disabled label {
-        color:#757a7b;
+    .mat-mdc-checkbox-disabled label {
+      color: #757a7b;
+    }
+    .mdc-checkbox--disabled .mdc-checkbox__background {
+      border-color: #757a7b;
+    }
+
+    .mat-mdc-paginator-range-label,
+    .mat-mdc-paginator-page-size-label {
+      color: #000000;
+      .mdc-text-field--focused{
+        border-color:#000000;
       }
-      .mdc-checkbox--disabled .mdc-checkbox__background {
-        border-color:#757a7b;
-      }
+    }
+
+    .mat-mdc-select-value-text {
+      color: #000000b2;
+      font-family: 'Jura', sans-serif;
+      font-size: 16px;
+    }
   }
 
   .mat-mdc-checkbox
@@ -102,7 +135,4 @@
     ~ .mdc-checkbox__background {
     background-color: #000000;
   }
-
-
- 
 }
